--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Effects of Religious Service Attendance on Charity and Volunteering Using Novel Measures From A National Longitudinal Panel},
+  pdftitle={Causal Effects of Religious Service Attendance on Prosocial Behaviour: Evidence from a Longitudinal Study in New Zealand.},
   pdfauthor={Joseph A. Bulbulia; Don E Davis; Kenneth G. Rice; Chris G. Sibley; Geoffrey Troughton},
   pdfkeywords={Use, use},
   colorlinks=true,
@@ -198,8 +198,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Effects of Religious Service Attendance on Charity and
-Volunteering Using Novel Measures From A National Longitudinal Panel}
+\title{Causal Effects of Religious Service Attendance on Prosocial
+Behaviour: Evidence from a Longitudinal Study in New Zealand.}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -247,31 +247,39 @@ University of Wellington
       
 
 
-\date{2024-05-22}
+\date{2024-10-10}
 \begin{document}
 \maketitle
 \begin{abstract}
-Investigations into the causal effects of religion on prosociality must
-be precise. Researchers must articulate a specific causal contrast for a
-religious feature, select appropriate prosociality measures, define the
-target population, gather time-series data, and conduct statistical and
-sensitivity analyses only after meeting identification assumptions. We
-clarify causal effects for three hypothetical interventions of religious
-service attendance (increase, decrease, maintain) across eight
-prosociality indicators in a longitudinal sample of 33,198 New
-Zealanders (2018 to 2021). \textbf{Study 1} examines the effects of
-religious service on self-reported charitable contributions and
-volunteerism. \textbf{Studies 2 and 3} investigate the effects on
-receiving personal and financial assistance from family, friends, and
-community, using measures designed to minimise self-reporting bias.
-Across all studies, inferred causal effects are substantially less
-pronounced than observed cross-sectional associations, highlighting the
-potential for cross-sectional data to mislead. Nonetheless, regular
-attendance across the population would increase charitable donations by
-4\% of the New Zealand Government's annual spending compared with
-current attendance levels. This research underscores the essential role
-of precise causal questions in studying cultural practices and provides
-a rigorous workflow for addressing them.
+We investigate the causal effects of religious service attendance on
+prosocial behaviours, using longitudinal data from a nationally
+representative sample of 33,198 New Zealanders collected between 2018
+and 2021. Our study departs from traditional approaches in three ways:
+(1) we utilise longitudinal data rather than relying exclusively on
+cross-sectional data; (2) we supplement self-reported measures of giving
+with measures of help received; and (3) our statistical models are
+designed to address causal questions rather than merely describe change
+over time. We model causal contrasts for three types of hypothetical
+interventions --- increasing, decreasing, or maintaining religious
+service attendance --- and assess their effects on eight distinct
+prosocial domains.
+
+Study 1 focuses on self-reported charitable donations and volunteering.
+Studies 2 and 3 examine receiving help---both personal and
+financial---from family, friends, and the wider community, which are
+novel measures of prosociality not previously used in this context.
+Across all analyses, we find that the causal effects of religious
+attendance are notably smaller than cross-sectional associations
+typically suggest. However, a modest increase in regular attendance
+would nevertheless result in charitable donations equivalent to
+approximately 4\% of the New Zealand Government's annual spending,
+revealing a significant public benefit.
+
+Overall, these findings underscore the importance of precise causal
+analyses for clarifying the social functions of religious participation
+in a manner relevant to inform public policy. By employing robust causal
+inference techniques, our research advances a methodological framework
+for studying cultural practices and their social consequences.
 
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Charity};
 \emph{Church}; \emph{Cooperation}; \emph{Cross-validation};
@@ -291,11 +299,11 @@ Coulanges 1903}; \citeproc{ref-johnson2005}{Johnson 2005};
 \citeproc{ref-swanson1967}{Swanson 1967}; \citeproc{ref-watts2015}{Watts
 \emph{et al.} 2015}; \citeproc{ref-watts2016}{Watts \emph{et al.} 2016};
 \citeproc{ref-wheatley1971}{Wheatley 1971};
-\citeproc{ref-whitehouse2023}{Whitehouse \emph{et al.} 2023}).
-Quantifying causal effects for religion, and many other social
-behaviours, presents significant challenges. Investigators have limited
-scope to randomise supernatural beliefs, community worship, and personal
-prayer. On the other hand, valid causal inferences from
+\citeproc{ref-whitehouse2023}{Whitehouse \emph{et al.} 2023}). However,
+quantifying causal effects for religion presents significant challenges
+(\citeproc{ref-major2023exploring}{Major-Smith 2023}). Investigators
+have limited scope to randomise supernatural beliefs, community worship,
+and personal prayer. On the other hand, valid causal inferences from
 non-experimental, ``real world'' data must combine high-resolution
 repeated-measures time-series data with robust methods for causal
 inference. Few studies meet this standard. A recent survey of the
@@ -307,66 +315,17 @@ Presently, studies using longitudinal (panel) data have yet to
 appropriately leverage their repeated measures to obtain reliable causal
 inferences.
 
-An encouraging recent attempt to obtain valid causal inference is
-Major-Smith's investigation of the relationships between religious
-attendance, beliefs, and affiliation on blood donations among pregnant
-women and their partners in Bristol, United Kingdom, who participated in
-the Avon Longitudinal Study of Parents and Children, \(N=13,477\)
-mothers and \(N=13,424\) partners
-(\citeproc{ref-major2023exploring}{Major-Smith 2023}). Major-Smith's
-study begins with a careful overview of the threats to causal inference
-from confounding and selection bias. A series of cross-sectional
-regression analyses observe associations between the stated features of
-religion and self-reported blood donations in this cohort.
-Unfortunately, because the outcome is a retrospective question asked
-during pregnancy about past blood donations, the analysis cannot
-capitalise on the time-series data of the Avon panel. There is neither
-control for baseline measures of religion variables (the treatments) nor
-for baseline blood donations (the outcome), and the study cannot
-evaluate outcomes after initiation into religious service or its
-cessation. Although cross-sectional associations can suggest causality,
-we cannot typically attach causal interpretations without strong
-assumptions about the order and timing of events
-(\citeproc{ref-vanderweele2021can}{VanderWeele 2021a}). Indeed, below we
-report an analysis restricted to baseline New Zealand Attitudes and
-Values Study data that observes a 2.89 times overstatement of the
-monthly vs zero charitable donations causal contrast and a 2.58 times
-overstatement of the monthly vs zero volunteering causal contrast. A
-virtue of Major-Smith (\citeproc{ref-major2023exploring}{2023}) is that
-the study makes its causal assumptions explicit and provides sensitivity
-analysis to frame its results. These strategies should be adopted in any
-study that estimates causal effects, and we adopt these strategies here.
-
 Here, to obtain causal inferences from time-series data, we leverage
 comprehensive panel data from 33,198 participants in the New Zealand
-Attitudes and Values Study from 2018-2021 to quantify the effects of
+Attitudes and Values Study from 2018-2021 and quantify the effects of
 clearly defined interventions in religious attendance across the
-population of New Zealanders on two features of prosociality: charitable
-financial donations and volunteering, measured by stated charitable
-donations and volunteering as well as by revealed measures of help
-received from the community. We define a causal effect as a quantitative
-contrast between mean outcomes for a population from pre-specified
-interventions. These outcomes are called ``counterfactual'' or
-``potential'' outcomes, terms we use interchangeably
-(\citeproc{ref-pearl2009}{Pearl 2009a}; \citeproc{ref-robins1986}{Robins
-1986}; \citeproc{ref-rubin2005}{Rubin 2005};
-\citeproc{ref-neyman1923}{Splawa-Neyman \emph{et al.} 1990};
-\citeproc{ref-vanderlaan2018}{Van Der Laan and Rose 2018}).\footnote{Philosophical
-  disagreements about the meanings assigned to ``potential'' and
-  ``counterfactual'' outcomes do not affect our use.} A fundamental
-challenge in observational studies is to ensure \emph{balance} between
-the variables in interventions or ``treatments'' to be compared that
-might affect both treatment and the potential outcomes under treatment
-(\citeproc{ref-shiba2021using}{Shiba and Kawahara 2021}). We call the
-state of imbalance \emph{confounding}, and the strategy for ensuring
-balance, \emph{confounding control}. In this study, we express the
-interventions on religious service as ``modified treatment policies''
-(\citeproc{ref-duxedaz2021}{Díaz \emph{et al.} 2021},
-\citeproc{ref-diaz2023lmtp}{2023};
+population of New Zealanders assessed on eight outcome domains of
+charitable financial donations and volunteering. We obtain causal
+inferences by contrasting inferred population averages under different
+modified treatment policies (\citeproc{ref-duxedaz2021}{Díaz \emph{et
+al.} 2021}, \citeproc{ref-diaz2023lmtp}{2023};
 \citeproc{ref-haneuse2013estimation}{Haneuse and Rotnitzky 2013};
-\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}). We obtain
-causal inferences by contrasting inferred population averages under
-different modified treatment policies.
+\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}).
 
 Our initial causal contrast investigates: ``What would be the average
 difference across the New Zealand population if everyone attended
@@ -398,10 +357,9 @@ unbounded, those we have selected address these specific scientific and
 policy interests.
 
 Note that our approach does not focus on testing specific hypotheses;
-instead, we aim to compute our pre-specified causal contrasts with high
-accuracy by combining appropriate time-series data and robust methods
-for causal inference (\citeproc{ref-hernan2024stating}{Hernán and
-Greenland 2024}).
+instead, we aim to compute our pre-specified causal contrasts accurately
+and consistently (\citeproc{ref-hernan2024stating}{Hernán and Greenland
+2024}).
 
 \subsection{Method}\label{method}
 
@@ -750,8 +708,8 @@ policy intervention are identified if causal effects would be identified
 from a fixed intervention. We recommend expressing causal identification
 using SWIGs because they encompass causal DAGs yet are more precise and
 more general. Refer to (\citeproc{ref-richardson2013}{Richardson and
-Robins 2013a}, \citeproc{ref-richardson2013swigsprimer}{2013b},
-\citeproc{ref-richardson2023potential}{2023},
+Robins 2013a}; \citeproc{ref-richardson2013swigsprimer}{Richardson and
+Robins 2013b}, \citeproc{ref-richardson2023potential}{2023},
 \citeproc{ref-richardson2023potential}{2023};
 \citeproc{ref-robins2010alternative}{Robins and Richardson 2010};
 \citeproc{ref-shpitser2016causal}{Shpitser and Tchetgen 2016}). On
@@ -781,7 +739,7 @@ disjunctive cause criterion} by following these steps:
 \item
   \textbf{Included proxies for unmeasured confounders} affecting both
   exposure and outcome. According to the principles of d-separation
-  Pearl (\citeproc{ref-pearl2009a}{2009b}), using proxies allows us to
+  Pearl (\citeproc{ref-pearl2009a}{2009}), using proxies allows us to
   control for their associated unmeasured confounders indirectly.
 \item
   \textbf{Controlled for baseline exposure} and \textbf{baseline
@@ -910,6 +868,12 @@ intervention that eliminates religious service allows us to consider the
 potential costs and benefits of the widespread loss of religious
 practice across society.
 
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/graph_density_of_exposure_both
+Object size: 27.03 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
 \begin{figure}
 
 \centering{
@@ -946,6 +910,12 @@ overall. However, movement between these states reveals they are not
 deterministic. States 1, 2, 3, and 5 exhibit more frequent jumps in and
 out of these states, suggesting lower stability and/or measurement
 error.
+
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/transition_table.rds
+Object size: 0.00 MB
+👍 Read operation completed successfully!
+\end{verbatim}
 
 \begin{longtable}[]{@{}
   >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0978}}
@@ -1870,7 +1840,7 @@ appropriate time-series data, and, only after causal assumptions and
 identification criteria are satisfied and threats made explicit,
 calculate statistical estimates. Having obtained these estimates, which
 rely on assumptions, we must evaluate robustness using sensitivity
-analyses (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
+analyses (\citeproc{ref-bulbulia2022}{Bulbulia 2023};
 \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
 \citeproc{ref-linden2020EVALUE}{Linden \emph{et al.} 2020};
 \citeproc{ref-ogburn2021}{Ogburn and Shpitser 2021};
@@ -1969,7 +1939,7 @@ where traditional associational methods still dominate. Transitioning to
 causal data science might seem daunting. Yet, causation inherently
 unfolds in time, with causes preceding effects. Estimating average
 causal effects involves multi-stepped workflows and robust time-series
-data (\citeproc{ref-bulbulia2023}{Bulbulia 2023};
+data (\citeproc{ref-bulbulia2023}{Bulbulia 2024c};
 \citeproc{ref-neal2020introduction}{Neal 2020}). Although the need for
 researchers to develop new skills imposes considerable demands, it is
 encouraging that methods for causal inference have become standard in
@@ -2541,6 +2511,12 @@ siblings were grouped into the highest category.
 \subsection{Appendix B. Baseline Demographic
 Statistics}\label{appendix-demographics}
 
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/table_baseline.rds
+Object size: 18.67 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
 \begin{longtable}[]{@{}ll@{}}
 
 \caption{\label{tbl-table-demography}Baseline demographic statistics}
@@ -2555,23 +2531,23 @@ Statistics}\label{appendix-demographics}
 \endlastfoot
 \textbf{Age} & NA \\
 Mean (SD) & 51 (14) \\
-Range & 18, 96 \\
-IQR & 41, 61 \\
+Min, Max & 18, 96 \\
+Q1, Q3 & 41, 61 \\
 \textbf{Agreeableness} & NA \\
 Mean (SD) & 5.37 (0.98) \\
-Range & 1.00, 7.00 \\
-IQR & 4.75, 6.00 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 4.75, 6.00 \\
 Unknown & 272 \\
 \textbf{Born Nz} & 26,197 (79\%) \\
 Unknown & 34 \\
 \textbf{Children Num} & NA \\
 Mean (SD) & 1.76 (1.44) \\
-Range & 0.00, 14.00 \\
-IQR & 0.00, 3.00 \\
+Min, Max & 0.00, 14.00 \\
+Q1, Q3 & 0.00, 3.00 \\
 \textbf{Conscientiousness} & NA \\
 Mean (SD) & 5.14 (1.04) \\
-Range & 1.00, 7.00 \\
-IQR & 4.50, 6.00 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 4.50, 6.00 \\
 Unknown & 266 \\
 \textbf{Education Level Coarsen} & NA \\
 no\_qualification & 769 (2.3\%) \\
@@ -2592,8 +2568,8 @@ asian & 1,438 (4.4\%) \\
 Unknown & 225 \\
 \textbf{Extraversion} & NA \\
 Mean (SD) & 3.88 (1.20) \\
-Range & 1.00, 7.00 \\
-IQR & 3.00, 4.75 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 3.00, 4.75 \\
 Unknown & 266 \\
 \textbf{Hlth Disability} & 7,558 (23\%) \\
 Unknown & 561 \\
@@ -2606,69 +2582,69 @@ Unknown & 561 \\
 Unknown & 334 \\
 \textbf{Hlth Sleep Hours} & NA \\
 Mean (SD) & 6.95 (1.11) \\
-Range & 2.50, 16.00 \\
-IQR & 6.00, 8.00 \\
+Min, Max & 2.50, 16.00 \\
+Q1, Q3 & 6.00, 8.00 \\
 Unknown & 1,528 \\
 \textbf{Honesty Humility} & NA \\
 Mean (SD) & 5.49 (1.15) \\
-Range & 1.00, 7.00 \\
-IQR & 4.75, 6.50 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 4.75, 6.50 \\
 Unknown & 269 \\
 \textbf{Hours Children log} & NA \\
 Mean (SD) & 1.10 (1.58) \\
-Range & 0.00, 5.13 \\
-IQR & 0.00, 2.20 \\
+Min, Max & 0.00, 5.13 \\
+Q1, Q3 & 0.00, 2.20 \\
 Unknown & 875 \\
 \textbf{Hours Exercise log} & NA \\
 Mean (SD) & 1.57 (0.83) \\
-Range & 0.00, 4.39 \\
-IQR & 1.10, 2.08 \\
+Min, Max & 0.00, 4.39 \\
+Q1, Q3 & 1.10, 2.08 \\
 Unknown & 875 \\
 \textbf{Hours Housework log} & NA \\
 Mean (SD) & 2.15 (0.77) \\
-Range & 0.00, 5.13 \\
-IQR & 1.79, 2.71 \\
+Min, Max & 0.00, 5.13 \\
+Q1, Q3 & 1.79, 2.71 \\
 Unknown & 875 \\
 \textbf{Hours Work log} & NA \\
 Mean (SD) & 2.64 (1.59) \\
-Range & 0.00, 4.62 \\
-IQR & 1.10, 3.71 \\
+Min, Max & 0.00, 4.62 \\
+Q1, Q3 & 1.10, 3.71 \\
 Unknown & 875 \\
 \textbf{Household Inc log} & NA \\
 Mean (SD) & 11.41 (0.76) \\
-Range & 0.69, 14.92 \\
-IQR & 11.00, 11.92 \\
+Min, Max & 0.69, 14.92 \\
+Q1, Q3 & 11.00, 11.92 \\
 Unknown & 1,352 \\
 \textbf{Kessler6 Sum} & NA \\
 Mean (SD) & 5 (4) \\
-Range & 0, 24 \\
-IQR & 2, 7 \\
+Min, Max & 0, 24 \\
+Q1, Q3 & 2, 7 \\
 Unknown & 297 \\
 \textbf{Male} & 11,975 (36\%) \\
 \textbf{Modesty} & NA \\
 Mean (SD) & 6.03 (0.90) \\
-Range & 1.00, 7.00 \\
-IQR & 5.50, 6.75 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 5.50, 6.75 \\
 Unknown & 11 \\
 \textbf{Neuroticism} & NA \\
 Mean (SD) & 3.45 (1.15) \\
-Range & 1.00, 7.00 \\
-IQR & 2.50, 4.25 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 2.50, 4.25 \\
 Unknown & 274 \\
 \textbf{Nz Dep2018} & NA \\
 Mean (SD) & 4.69 (2.70) \\
-Range & 1.00, 10.00 \\
-IQR & 2.00, 7.00 \\
+Min, Max & 1.00, 10.00 \\
+Q1, Q3 & 2.00, 7.00 \\
 Unknown & 233 \\
 \textbf{Nzsei 13 l} & NA \\
 Mean (SD) & 55 (16) \\
-Range & 10, 90 \\
-IQR & 42, 69 \\
+Min, Max & 10, 90 \\
+Q1, Q3 & 42, 69 \\
 Unknown & 172 \\
 \textbf{Openness} & NA \\
 Mean (SD) & 4.99 (1.12) \\
-Range & 1.00, 7.00 \\
-IQR & 4.25, 5.75 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 4.25, 5.75 \\
 Unknown & 267 \\
 \textbf{Partner} & 24,869 (76\%) \\
 Unknown & 422 \\
@@ -2708,13 +2684,13 @@ Unknown & 231 \\
 10 & 19,889 (60\%) \\
 \textbf{Short Form Health} & NA \\
 Mean (SD) & 5.06 (1.16) \\
-Range & 1.00, 7.00 \\
-IQR & 4.33, 6.00 \\
+Min, Max & 1.00, 7.00 \\
+Q1, Q3 & 4.33, 6.00 \\
 Unknown & 5 \\
 \textbf{Total Siblings} & NA \\
 Mean (SD) & 2.52 (1.80) \\
-Range & 0.00, 23.00 \\
-IQR & 1.00, 3.00 \\
+Min, Max & 0.00, 23.00 \\
+Q1, Q3 & 1.00, 3.00 \\
 Unknown & 689 \\
 
 \end{longtable}
@@ -2726,49 +2702,46 @@ couples who met inclusion criteria.
 
 \subsection{Appendix C: Treatment Statistics}\label{appendix-exposures}
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.4247}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.2877}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.2877}}@{}}
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/table_exposures.rds
+Object size: 2.63 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
+\begin{table}
 
 \caption{\label{tbl-table-exposures-code}Exposures at baseline and
 baseline + 1 (treatment) wave}
 
-\tabularnewline
+\centering{
 
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Exposure Variables by Wave}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{2018}, N = 33,198
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{2019}, N = 33,198
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-\textbf{Religion Church Round} & NA & NA \\
-0 & 27,653 (83\%) & 28,028 (84\%) \\
-1 & 1,077 (3.2\%) & 896 (2.7\%) \\
-2 & 777 (2.3\%) & 737 (2.2\%) \\
-3 & 658 (2.0\%) & 639 (1.9\%) \\
-4 & 1,729 (5.2\%) & 1,672 (5.0\%) \\
-5 & 336 (1.0\%) & 308 (0.9\%) \\
-6 & 226 (0.7\%) & 205 (0.6\%) \\
-7 & 74 (0.2\%) & 68 (0.2\%) \\
-8 & 668 (2.0\%) & 645 (1.9\%) \\
-Unknown & 0 & 0 \\
-\textbf{Alert Level Combined} & NA & NA \\
-no\_alert & 33,198 (100\%) & 23,751 (72\%) \\
-early\_covid & 0 (0\%) & 3,643 (11\%) \\
-alert\_level\_1 & 0 (0\%) & 2,821 (8.5\%) \\
-alert\_level\_2 & 0 (0\%) & 836 (2.5\%) \\
-alert\_level\_2\_5\_3 & 0 (0\%) & 552 (1.7\%) \\
-alert\_level\_4 & 0 (0\%) & 1,595 (4.8\%) \\
-Unknown & 0 & 0 \\
+\textbar{}\textbf{Exposure Variables by Wave} \textbar{}\textbf{2018}\\
+N = 33,198 \textbar{}\textbf{2019}\\
+N = 33,198 \textbar{}
+\textbar:------------------------------\textbar:--------------------\textbar:--------------------\textbar{}
+\textbar{}\textbf{Religion Church Round} \textbar NA \textbar NA
+\textbar{} \textbar0 \textbar27,653 (83\%) \textbar28,028 (84\%)
+\textbar{} \textbar1 \textbar1,077 (3.2\%) \textbar896 (2.7\%)
+\textbar{} \textbar2 \textbar777 (2.3\%) \textbar737 (2.2\%) \textbar{}
+\textbar3 \textbar658 (2.0\%) \textbar639 (1.9\%) \textbar{} \textbar4
+\textbar1,729 (5.2\%) \textbar1,672 (5.0\%) \textbar{} \textbar5
+\textbar336 (1.0\%) \textbar308 (0.9\%) \textbar{} \textbar6 \textbar226
+(0.7\%) \textbar205 (0.6\%) \textbar{} \textbar7 \textbar74 (0.2\%)
+\textbar68 (0.2\%) \textbar{} \textbar8 \textbar668 (2.0\%) \textbar645
+(1.9\%) \textbar{} \textbar Unknown \textbar0 \textbar0 \textbar{}
+\textbar{}\textbf{Alert Level Combined} \textbar NA \textbar NA
+\textbar{} \textbar no\_alert \textbar33,198 (100\%) \textbar23,751
+(72\%) \textbar{} \textbar early\_covid \textbar0 (0\%) \textbar3,643
+(11\%) \textbar{} \textbar alert\_level\_1 \textbar0 (0\%) \textbar2,821
+(8.5\%) \textbar{} \textbar alert\_level\_2 \textbar0 (0\%) \textbar836
+(2.5\%) \textbar{} \textbar alert\_level\_2\_5\_3 \textbar0 (0\%)
+\textbar552 (1.7\%) \textbar{} \textbar alert\_level\_4 \textbar0 (0\%)
+\textbar1,595 (4.8\%) \textbar{} \textbar Unknown \textbar0 \textbar0
+\textbar{}
 
-\end{longtable}
+}
+
+\end{table}%
 
 tbl-table-exposures-code presents baseline (NZAVS time 10) and exposure
 wave (NZAVS time 11) statistics for the exposure variable: religious
@@ -2799,6 +2772,12 @@ the outcome.
 \subsubsection{Binary Transition Table for The
 Treatment}\label{binary-transition-table-for-the-treatment}
 
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/transition_table_binary_gain.rds
+Object size: 0.00 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
 \begin{longtable}[]{@{}ccc@{}}
 
 \caption{\label{tbl-transition-tablegain}Transition table for stability
@@ -2828,6 +2807,12 @@ another state in the following wave (off diagonal). Thus the cell
 located at the intersection of row \(i\) and column \(j\), where
 \(i \neq j\), gives us the counts of individuals moving from state \(i\)
 to state \(j\).
+
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/transition_table_binary_zero.rds
+Object size: 0.00 MB
+👍 Read operation completed successfully!
+\end{verbatim}
 
 \begin{longtable}[]{@{}ccc@{}}
 
@@ -2871,6 +2856,12 @@ the treatment wave (in contrast to merely estimating a prevalence
 effect). See VanderWeele \emph{et al.}
 (\citeproc{ref-vanderweele2020}{2020}).
 
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/love_plot_one
+Object size: 0.03 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
 \begin{figure}
 
 \centering{
@@ -2887,61 +2878,61 @@ covariates on the treatment}
 \subsection{Appendix D: Baseline and End of Study Outcome
 Statistics}\label{appendix-outcomes}
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.4474}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.2763}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.2763}}@{}}
+\begin{verbatim}
+Object read from: /Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7/table_outcomes.rds
+Object size: 9.18 MB
+👍 Read operation completed successfully!
+\end{verbatim}
+
+\begin{table}
 
 \caption{\label{tbl-table-outcomes}Outcomes at baseline and
 end-of-study}
 
-\tabularnewline
+\centering{
 
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Outcome Variables by Wave}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{2018}, N = 33,198
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{2020}, N = 33,198
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-\textbf{Annual Charity} & 150 (40, 500) & 200 (20, 600) \\
-Unknown & 1,076 & 6,730 \\
-\textbf{Community Gives Money Binary} & 135 (0.4\%) & 118 (0.4\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Community Gives Time Binary} & 1,702 (5.2\%) & 1,669 (6.4\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Family Gives Money Binary} & 1,782 (5.5\%) & 1,236 (4.7\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Family Gives Time Binary} & 9,539 (29\%) & 7,600 (29\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Friends Give Money Binary} & 372 (1.1\%) & 270 (1.0\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Friends Give Time} & 5,765 (18\%) & 4,855 (19\%) \\
-Unknown & 669 & 6,959 \\
-\textbf{Sense Neighbourhood Community} & NA & NA \\
-1 & 1,976 (6.0\%) & 1,124 (4.2\%) \\
-2 & 4,037 (12\%) & 2,703 (10\%) \\
-3 & 4,796 (15\%) & 3,561 (13\%) \\
-4 & 6,840 (21\%) & 5,809 (22\%) \\
-5 & 7,088 (21\%) & 6,477 (24\%) \\
-6 & 5,753 (17\%) & 5,060 (19\%) \\
-7 & 2,550 (7.7\%) & 2,104 (7.8\%) \\
-Unknown & 158 & 6,360 \\
-\textbf{Social Belonging} & 5.33 (4.33, 6.00) & 5.33 (4.33, 6.00) \\
-Unknown & 268 & 6,418 \\
-\textbf{Social Support} & 6.33 (5.33, 7.00) & 6.33 (5.33, 7.00) \\
-Unknown & 19 & 6,286 \\
-\textbf{Volunteering Hours} & 0.00 (0.00, 1.00) & 0.00 (0.00, 1.00) \\
-Unknown & 875 & 6,863 \\
-\textbf{Volunteers Binary} & 9,443 (29\%) & 6,881 (26\%) \\
-Unknown & 875 & 6,863 \\
+\textbar{}\textbf{Outcome Variables by Wave} \textbar{}\textbf{2018}\\
+N = 33,198 \textbar{}\textbf{2020}\\
+N = 33,198 \textbar{}
+\textbar:---------------------------------\textbar:--------------------\textbar:--------------------\textbar{}
+\textbar{}\textbf{Annual Charity} \textbar150 (40, 500) \textbar200 (20,
+600) \textbar{} \textbar Unknown \textbar1,076 \textbar6,730 \textbar{}
+\textbar{}\textbf{Community Gives Money Binary} \textbar135 (0.4\%)
+\textbar118 (0.4\%) \textbar{} \textbar Unknown \textbar669
+\textbar6,959 \textbar{} \textbar{}\textbf{Community Gives Time Binary}
+\textbar1,702 (5.2\%) \textbar1,669 (6.4\%) \textbar{} \textbar Unknown
+\textbar669 \textbar6,959 \textbar{} \textbar{}\textbf{Family Gives
+Money Binary} \textbar1,782 (5.5\%) \textbar1,236 (4.7\%) \textbar{}
+\textbar Unknown \textbar669 \textbar6,959 \textbar{}
+\textbar{}\textbf{Family Gives Time Binary} \textbar9,539 (29\%)
+\textbar7,600 (29\%) \textbar{} \textbar Unknown \textbar669
+\textbar6,959 \textbar{} \textbar{}\textbf{Friends Give Money Binary}
+\textbar372 (1.1\%) \textbar270 (1.0\%) \textbar{} \textbar Unknown
+\textbar669 \textbar6,959 \textbar{} \textbar{}\textbf{Friends Give
+Time} \textbar5,765 (18\%) \textbar4,855 (19\%) \textbar{}
+\textbar Unknown \textbar669 \textbar6,959 \textbar{}
+\textbar{}\textbf{Sense Neighbourhood Community} \textbar NA \textbar NA
+\textbar{} \textbar1 \textbar1,976 (6.0\%) \textbar1,124 (4.2\%)
+\textbar{} \textbar2 \textbar4,037 (12\%) \textbar2,703 (10\%)
+\textbar{} \textbar3 \textbar4,796 (15\%) \textbar3,561 (13\%)
+\textbar{} \textbar4 \textbar6,840 (21\%) \textbar5,809 (22\%)
+\textbar{} \textbar5 \textbar7,088 (21\%) \textbar6,477 (24\%)
+\textbar{} \textbar6 \textbar5,753 (17\%) \textbar5,060 (19\%)
+\textbar{} \textbar7 \textbar2,550 (7.7\%) \textbar2,104 (7.8\%)
+\textbar{} \textbar Unknown \textbar158 \textbar6,360 \textbar{}
+\textbar{}\textbf{Social Belonging} \textbar5.33 (4.33, 6.00)
+\textbar5.33 (4.33, 6.00) \textbar{} \textbar Unknown \textbar268
+\textbar6,418 \textbar{} \textbar{}\textbf{Social Support} \textbar6.33
+(5.33, 7.00) \textbar6.33 (5.33, 7.00) \textbar{} \textbar Unknown
+\textbar19 \textbar6,286 \textbar{} \textbar{}\textbf{Volunteering
+Hours} \textbar0.00 (0.00, 1.00) \textbar0.00 (0.00, 1.00) \textbar{}
+\textbar Unknown \textbar875 \textbar6,863 \textbar{}
+\textbar{}\textbf{Volunteers Binary} \textbar9,443 (29\%) \textbar6,881
+(26\%) \textbar{} \textbar Unknown \textbar875 \textbar6,863 \textbar{}
 
-\end{longtable}
+}
+
+\end{table}%
 
 Table~\ref{tbl-table-outcomes} presents baseline and end-of-study
 descriptive statistics for the outcome variables.
@@ -2955,7 +2946,7 @@ descriptive statistics for the outcome variables.
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-angrist2009mostly}
 Angrist, JD, and Pischke, J-S (2009) \emph{Mostly harmless econometrics:
-An empiricist's companion}, Princeton university press.
+An empiricist's companion}, Princeton University Press.
 
 \bibitem[\citeproctext]{ref-athey2019}
 Athey, S, Tibshirani, J, and Wager, S (2019) Generalized random forests.
@@ -2986,24 +2977,26 @@ Bulbulia, J (2012) Spreading order: Religion, cooperative niche
 construction, and risky coordination problems. \emph{Biology \&
 Philosophy}, \textbf{27}, 1--27.
 
-\bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
-Bulbulia, J (2024a) A practical guide to causal inference in three-wave
-panel studies. \emph{PsyArXiv Preprints}.
-doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
-
 \bibitem[\citeproctext]{ref-bulbulia2022}
-Bulbulia, JA (2022) A workflow for causal inference in cross-cultural
-psychology. \emph{Religion, Brain \& Behavior}, \textbf{0}(0), 1--16.
+Bulbulia, JA (2023) A workflow for causal inference in cross-cultural
+psychology. \emph{Religion, Brain \& Behavior}, \textbf{13}(3),
+291--306.
 doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
 
-\bibitem[\citeproctext]{ref-bulbulia2023}
-Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
-practical guide.
+\bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
+Bulbulia, JA (2024a) A practical guide to causal inference in three-wave
+panel studies. \emph{PsyArXiv Preprints}.
+doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
 \bibitem[\citeproctext]{ref-margot2024}
 Bulbulia, JA (2024b) \emph{Margot: MARGinal observational
 treatment-effects}.
 doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
+
+\bibitem[\citeproctext]{ref-bulbulia2023}
+Bulbulia, JA (2024c) Methods in causal inference part 1: Causal diagrams
+and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}.
+Retrieved from \url{https://osf.io/b23k7}
 
 \bibitem[\citeproctext]{ref-bulbulia2023a}
 Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
@@ -3081,14 +3074,14 @@ Inference}, \textbf{11}(1), 20220077.
 doi:\href{https://doi.org/doi:10.1515/jci-2022-0077}{doi:10.1515/jci-2022-0077}.
 
 \bibitem[\citeproctext]{ref-fahy2017}
-Fahy, KM, Lee, A, and Milne, BJ (2017b) \emph{New Zealand socio-economic
-index 2013}, Wellington, New Zealand: Statistics New Zealand-Tatauranga
-Aotearoa.
+Fahy, KM, Lee, A, and Milne, BJ (2017b) \emph{{N}ew {Z}ealand
+socio-economic index 2013}, Wellington, New Zealand: Statistics New
+Zealand-Tatauranga Aotearoa.
 
 \bibitem[\citeproctext]{ref-fahy2017a}
-Fahy, KM, Lee, A, and Milne, BJ (2017a) \emph{New Zealand socio-economic
-index 2013}, Wellington, New Zealand: Statistics New Zealand-Tatauranga
-Aotearoa.
+Fahy, KM, Lee, A, and Milne, BJ (2017a) \emph{{N}ew {Z}ealand
+socio-economic index 2013}, Wellington, New Zealand: Statistics New
+Zealand-Tatauranga Aotearoa.
 
 \bibitem[\citeproctext]{ref-fraser_coding_2020}
 Fraser, G, Bulbulia, J, Greaves, LM, Wilson, MS, and Sibley, CG (2020)
@@ -3137,7 +3130,7 @@ doi:\href{https://doi.org/10.1001/jamanetworkopen.2022.34425}{10.1001/jamanetwor
 
 \bibitem[\citeproctext]{ref-hoverd_religious_2010}
 Hoverd, WJ, and Sibley, CG (2010) Religious and denominational diversity
-in new zealand 2009. \emph{New Zealand Sociology}, \textbf{25}(2),
+in {N}ew {Z}ealand 2009. \emph{New Zealand Sociology}, \textbf{25}(2),
 59--87.
 
 \bibitem[\citeproctext]{ref-huitfeldt2019collapsibility}
@@ -3238,12 +3231,12 @@ Spirituality}, \textbf{8}(2), 149.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in r and stan}, CRC press.
+with examples in {R} and {S}tan}, CRC press.
 
 \bibitem[\citeproctext]{ref-McLeod2020}
-McLeod, J (2020) The new zealand support report: The current state and
-significance of giving in new zealand and the outlook for recipients.,
-JBWere. Retrieved from
+McLeod, J (2020) The {N}ew {Z}ealand {S}upport {R}eport: The current
+state and significance of giving in {N}ew {Z}ealand and the outlook for
+recipients., JBWere. Retrieved from
 \url{https://www.jbwere.co.nz/media/1qudxw3q/jbwere-nz-support-report-digital.pdf}
 
 \bibitem[\citeproctext]{ref-monsma2007religion}
@@ -3285,12 +3278,8 @@ TJ (2019) Religious service attendance, health behaviors and
 well-being---an outcome-wide longitudinal analysis. \emph{European
 Journal of Public Health}, \textbf{29}(6), 1177--1183.
 
-\bibitem[\citeproctext]{ref-pearl2009}
-Pearl, J (2009a) \emph{\href{https://doi.org/10.1214/09-SS057}{Causal
-inference in statistics: An overview}}.
-
 \bibitem[\citeproctext]{ref-pearl2009a}
-Pearl, J (2009b) \emph{Causality}, Cambridge University Press.
+Pearl, J (2009) \emph{Causality}, Cambridge University Press.
 
 \bibitem[\citeproctext]{ref-polley2023}
 Polley, E, LeDell, E, Kennedy, C, and Laan, M van der (2023)
@@ -3299,7 +3288,8 @@ Polley, E, LeDell, E, Kennedy, C, and Laan, M van der (2023)
 
 \bibitem[\citeproctext]{ref-richardson2013}
 Richardson, TS, and Robins, JM (2013a) Single world intervention graphs:
-A primer. In, Citeseer.
+A primer. In, Citeseer. Retrieved from
+\url{https://core.ac.uk/display/102673558}
 
 \bibitem[\citeproctext]{ref-richardson2013swigsprimer}
 Richardson, TS, and Robins, JM (2013b) Single world intervention graphs:
@@ -3312,12 +3302,6 @@ Richardson, TS, and Robins, JM (2023) Potential outcome and decision
 theoretic foundations for statistical causality. \emph{Journal of Causal
 Inference}, \textbf{11}(1), 20220012.
 
-\bibitem[\citeproctext]{ref-robins1986}
-Robins, J (1986) A new approach to causal inference in mortality studies
-with a sustained exposure period---application to control of the healthy
-worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
-1393--1512.
-
 \bibitem[\citeproctext]{ref-robins1992}
 Robins, JM, and Greenland, S (1992) Identifiability and exchangeability
 for direct and indirect effects. \emph{Epidemiology}, \textbf{3}(2),
@@ -3328,12 +3312,6 @@ Robins, JM, and Richardson, TS (2010) Alternative graphical causal
 models and the identification of direct effects. \emph{Causality and
 Psychopathology: Finding the Determinants of Disorders and Their Cures},
 \textbf{84}, 103--158.
-
-\bibitem[\citeproctext]{ref-rubin2005}
-Rubin, DB (2005) Causal inference using potential outcomes: Design,
-modeling, decisions. \emph{Journal of the American Statistical
-Association}, \textbf{100}(469), 322--331. Retrieved from
-\url{https://www.jstor.org/stable/27590541}
 
 \bibitem[\citeproctext]{ref-schloss2011evolutionary}
 Schloss, JP, and Murray, MJ (2011) Evolutionary accounts of belief in
@@ -3351,11 +3329,6 @@ attendance and alloparenting: An analysis of fertility, social support
 and child development among {E}nglish mothers. \emph{Philosophical
 Transactions of the Royal Society B}, \textbf{375}(1805), 20190428.
 
-\bibitem[\citeproctext]{ref-shiba2021using}
-Shiba, K, and Kawahara, T (2021) Using propensity scores for causal
-inference: Pitfalls and tips. \emph{Journal of Epidemiology},
-\textbf{31}(8), 457--463.
-
 \bibitem[\citeproctext]{ref-shpitser2016causal}
 Shpitser, I, and Tchetgen, ET (2016) Causal inference with a graphical
 hierarchy of interventions. \emph{Annals of Statistics}, \textbf{44}(6),
@@ -3369,12 +3342,13 @@ Cognitive Science of Religion}, \textbf{1}, 29--45.
 \bibitem[\citeproctext]{ref-sibley2021}
 Sibley, CG (2021)
 \emph{\href{https://doi.org/10.31234/osf.io/wgqvy}{Sampling procedure
-and sample details for the new zealand attitudes and values study}}.
+and sample details for the {N}ew {Z}ealand {A}ttitudes and {V}alues
+{S}tudy}}.
 
 \bibitem[\citeproctext]{ref-sibley2011}
 Sibley, CG, Luyten, N, Purnomo, M, \ldots{} Robertson, A (2011) The
 Mini-IPIP6: Validation and extension of a short measure of the Big-Six
-factors of personality in New Zealand. \emph{New Zealand Journal of
+factors of personality in {N}ew {Z}ealand. \emph{New Zealand Journal of
 Psychology}, \textbf{40}(3), 142--159.
 
 \bibitem[\citeproctext]{ref-sosis2005does}
@@ -3386,11 +3360,6 @@ on Religion}, \textbf{1}.
 Sosis, R, and Bressler, ER (2003) Cooperation and commune longevity: A
 test of the costly signaling theory of religion. \emph{Cross-Cultural
 Research}, \textbf{37}(2), 211--239.
-
-\bibitem[\citeproctext]{ref-neyman1923}
-Splawa-Neyman, J, Dabrowska, DM, and Speed, TP (1990) On the application
-of probability theory to agricultural experiments. Essay on principles.
-Section 9. \emph{Statistical Science}, 465--472.
 
 \bibitem[\citeproctext]{ref-swanson1967}
 Swanson, GE (1967) Religion and regime: A sociological account of the
@@ -3454,7 +3423,7 @@ Religion}, \textbf{31}(1), 21--26.
 
 \bibitem[\citeproctext]{ref-vanderweele2017}
 VanderWeele, TJ, and Ding, P (2017) Sensitivity analysis in
-observational research: Introducing the e-value. \emph{Annals of
+observational research: Introducing the {E}-value. \emph{Annals of
 Internal Medicine}, \textbf{167}(4), 268--274.
 doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 
